# camera-service

./: pyproject.toml
camera_service/: __init__.py  cam_capture.py
camera_service/modules/: modules_list.py  start_modules.py
